--- a/ex12/src/index.html
+++ b/ex12/src/index.html
@@ -5,9 +5,5 @@
     attack your ankles chase the red dot, hairball run catnip eat the grass
     sniff.
   </p>
-  <p>
-    Kitty imsum dolor sit amet, shed everywhere shed everywhere stretching
-    attack your ankles chase the red dot, hairball run catnip eat the grass
-    sniff.
-  </p>
+  <p>Purr jump eat the grass</p>
 </main>
